wescamp.py: Update from add-on server

--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -9,7 +9,7 @@
   [about]
     title= _ "Author of this campaign:"
     [entry]
-      name="James The Invisible"
+      name="James_The_Invisible"
     [/entry]
   [/about]
   [about]
