--- a/For_Power/macros/misc.cfg
+++ b/For_Power/macros/misc.cfg
@@ -58,12 +58,32 @@
 #define GREATER_AMLA_DEFAULT_BONUSES
   [effect]
     apply_to=hitpoints
-    increase_total=3
+    increase_total=2
     heal_full=yes
   [/effect]
   [effect]
     apply_to=max_experience
-    increase=20		#This differs heroes from regular soldiers
+    increase=20
+  [/effect]
+  [effect]
+    apply_to=status
+    remove=poisoned
+  [/effect]
+  [effect]
+    apply_to=status
+    remove=slowed
+  [/effect]
+#enddef
+
+#define GREATER_AMLA_SMALLER_BONUSES
+  [effect]
+    apply_to=hitpoints
+    increase_total=1
+    heal_full=yes
+  [/effect]
+  [effect]
+    apply_to=max_experience
+    increase=20
   [/effect]
   [effect]
     apply_to=status
