--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -267,6 +267,14 @@
 		  speaker=Merissa
 		  message=_"You’re welcome, la- Clare. And one thing I heard someone saw some monsters in the river. I never saw them but be careful."
 		[/message]
+    [message]
+		  speaker=Merissa
+		  message={ASIDE _"And hey, Tinry, stop staring at her. I know she's pretty but she seems to be embarrassed by it despite she said nothing."}
+		[/message]
+    [message]
+		  speaker=Tinry
+		  message={ASIDE _"Heh? ... Alright, alright!"}
+		[/message]
     {TENTACLE 9 11}
     {TENTACLE 11 11}
     {TENTACLE 14 12}
