--- a/For_Power/scenarios/16a_Another_Orcish_Assault.cfg
+++ b/For_Power/scenarios/16a_Another_Orcish_Assault.cfg
@@ -7,6 +7,8 @@
 	next_scenario=17a_Conversation_with_the_earl
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{STORY16a}
 	{DEFAULT_SCHEDULE}
 	{SCENARIO_MUSIC loyalists.ogg}
