--- a/For_Power/scenarios2/03_More_Orcs.cfg
+++ b/For_Power/scenarios2/03_More_Orcs.cfg
@@ -22,6 +22,8 @@
 	map_data="{~add-ons/For_Power/maps/03_More_Orcs.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{SCENARIO_MUSIC knalgan_theme.ogg}
 	{EXTRA_SCENARIO_MUSIC northerners.ogg}
 	{EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
