--- a/For_Power/scenarios4/01_Searching_adventures.cfg
+++ b/For_Power/scenarios4/01_Searching_adventures.cfg
@@ -365,27 +365,27 @@
     [/message]
     [message]
       speaker=Jolla
-      message=_"Oh yes! I forgot. But where is Tinry?"
+      message=_"Oh yes! I forgot. But where is Tinry? I have not seen him for a few days. I am missing him ... well, a bit."
     [/message]
     [message]
       speaker=Clare
-      message=_"Well, it is a good question. He left a few days ago without saying a single word."
+      message=_"Well, it is a good question, he left a few days ago without saying a single word. I do not know about him anything more than you."
     [/message]
     [message]
       speaker=Lemyr
-      message=_"He left at night! It was not nice."
+      message=_"He left at night! It was not nice of him."
     [/message]
     [message]
       speaker=Merissa
-      message=_"Well, he spoke with me. He wanted to make an adventure maybe a treasure hunt. Ha ha he forgot he isn't so young."
+      message=_"Well, he had a talk with me. He wanted to make an adventure maybe a treasure hunt. Ha ha, he forgot he isn't so young."
     [/message]
     [message]
       speaker=Clare
-      message=_"Well it is a good idea. We could make an adventure as well. I am pretty sure that someone needs our help."
+      message=_"Well, it is a good idea. We could make an adventure as well. I am pretty sure that someone needs our help."
     [/message]
     [message]
       speaker=Merissa
-      message=_"Ok. I love adventures. And I think we spent too much time at one place. We should move on."
+      message=_"Ok, I love adventures. And I also think we spent too much time at one place. We should move on."
     [/message]
     [message]
       speaker=Lemyr
@@ -409,12 +409,45 @@
         equals=1
       [/variable]
       [then]
-        [kill]
-          side=1
-          level=3
-          x,y=recall,recall
-        [/kill]
+        [store_unit]
+          [filter]
+            [filter_wml]
+              [variables]
+                from_chapter_1=1
+              [/variables]
+            [/filter_wml]
+            x,y=recall,recall
+          [/filter]
+          variable=units_from_chapter_1
+          kill=no
+        [/store_unit]
+        [if]
+          [variable]
+            name=units_from_chapter_1.length
+            greater_than=0
+          [/variable]
+          [then]
+            {FOREACH units_from_chapter_1 i}
+            [kill]
+              id=units_from_chapter_1[$i].id
+            [/kill]
+            {NEXT i}
+          [/then]
+          [else]
+            [kill]
+              side=1
+              level=3
+              x,y=recall,recall
+            [/kill]
+          [/else]
+        [/if]
       [/then]
+    [/if]
+    [if]
+      [variable]
+        name=chapter_3_complete
+        equals=1
+      [/variable]
       [else]
         [store_unit]
           [filter]
@@ -466,7 +499,7 @@
         {CLEAR_VARIABLE clare_store}
       [/else]
     [/if]
-    {CLEAR_VARIABLE chapter_3_complete}
+    {CLEAR_VARIABLE chapter_3_complete,units_from_chapter_1}
   [/event]
   
   [event]
