--- a/For_Power/scenarios5/02_Flight.cfg
+++ b/For_Power/scenarios5/02_Flight.cfg
@@ -150,6 +150,10 @@
       message=_"I will miss you as well. I do not call criminals or former criminals my friends but you are my friend. I just started to like you."
     [/message]
     [message]
+      speaker=Jolla
+      message=_"Please, do not do it ... Tinry ... I ..."
+    [/message]
+    [message]
       speaker=Tinry
       message=_"Thanks, guys. I'm really glad to hear it but let us acknowledge it. I can live only for a few years but you sister, you can live for eternity."
     [/message]
@@ -159,7 +163,7 @@
     [/message]
     [message]
       speaker=Tinry
-      message=_"It isn't my way. I lived for a long time and had a lot of fun but my time to leave is coming. I don't regret anything. I think I deserve some rest. Just promise me that you won't die ever, sister."
+      message=_"No, it isn't my way. I lived for a long time and had a lot of fun but my time to leave is coming. I don't regret anything. I think I deserve some rest. Just promise me you won't ever die, sister."
     [/message]
     [message]
       speaker=Merissa
@@ -331,6 +335,46 @@
     [message]
       speaker=Lemyr
       message=_"It is only a small group. No one else is coming this time. We can handle them."
+    [/message]
+  [/event]
+  
+  [event]
+    name=victory
+    [message]
+      speaker=Jolla
+      message=_"It really saddens me to leave him behind. I ..."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Believe me, darling, we all will miss him but we will not forget him."
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"You do not understand me, mom. I loved him! I wanted to spend time with him, hug him and ehm, kiss him."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"I did not have the slightest idea ..."
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"But he had his eyes only for you, mom. Well and he also saw me like just a kid but I could change that with some time."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Did you want to use any spells on him?"
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"No, I promise. I just wanted to show him that I am very like you - virtuous, brave and powerful. But now, I cannot as he is gone."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"I really wish to help you to make your pain lesser but I have no idea how. I was never in such a situation, the only man I ever loved is still here, by my side."
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"No need to apologize, really. Just let me watch him for some time. (after half a hour) Very well, we can leave this place."
     [/message]
   [/event]
 [/scenario]
