--- a/For_Power/scenarios5/07_Cave.cfg
+++ b/For_Power/scenarios5/07_Cave.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/FP5_Cave.map}"
 	snapshot=no
 	turns=375
+  carryover_percentage=100
+  carryover_add=false
   {SCENARIO_MUSIC underground.ogg}
   {EXTRA_SCENARIO_MUSIC the_deep_path.ogg}
   {EXTRA_SCENARIO_MUSIC knolls.ogg}
