--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -91,6 +91,8 @@
 	next_scenario=05_A_Mage
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{SCENARIO_MUSIC the_city_falls.ogg}
 	{EXTRA_SCENARIO_MUSIC siege_of_laurelmor.ogg}
 	{EXTRA_SCENARIO_MUSIC heroes_rite.ogg}
