--- a/For_Power/scenarios/08_The_Teacher.cfg
+++ b/For_Power/scenarios/08_The_Teacher.cfg
@@ -262,6 +262,16 @@
 		[/endlevel]
 	[/event]
   
+  [event]
+    name=victory
+    # save the choice for later chapters
+    [set_global_variable]
+      namespace=james_the_invisible_for_power
+      from_local=path_chosen
+      to_global=chapter_1_path
+    [/set_global_variable]
+  [/event]
+  
   {ANIMATED_CAMPFIRE 5 20}
   {ANIMATED_CAMPFIRE 7 20}
   {ANIMATED_CAMPFIRE 5 3}
