--- a/For_Power/scenarios/12_An_Orchish_Town.cfg
+++ b/For_Power/scenarios/12_An_Orchish_Town.cfg
@@ -7,6 +7,8 @@
 	next_scenario=13_The_Assassin
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{SCENARIO_MUSIC northerners.ogg}
 	{STORY12}
 	{DEFAULT_SCHEDULE}
