--- a/For_Power/scenarios/15b_The_Poison.cfg
+++ b/For_Power/scenarios/15b_The_Poison.cfg
@@ -7,6 +7,8 @@
 	next_scenario=16b_Preserving
 	snapshot=no
 	turns=20
+  carryover_percentage=40
+  carryover_add=true
 	{SCENARIO_MUSIC underground.ogg} # replace the music
 	{STORY15b}
 	victory_when_enemies_defeated=no
