--- a/For_Power/scenarios2/02_The_Northern_Alliance.cfg
+++ b/For_Power/scenarios2/02_The_Northern_Alliance.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/02_The_Northern_Alliance.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{SCENARIO_MUSIC knalgan_theme.ogg}
 	{EXTRA_SCENARIO_MUSIC northerners.ogg}
 	{EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
