--- a/For_Power/scenarios3/05_Dealing_with_trolls.cfg
+++ b/For_Power/scenarios3/05_Dealing_with_trolls.cfg
@@ -31,6 +31,8 @@
 	map_data="{~add-ons/For_Power/maps/05_Dealing_with_trolls.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC underground.ogg}
   {EXTRA_SCENARIO_MUSIC knolls.ogg}
   {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
@@ -268,6 +270,7 @@
     {LOYAL_TROLL}
     {LOYAL_TROLL}
     {LOYAL_TROLL}
+    {VARIABLE trolls_spared yes}
     [endlevel]
 		  result=victory
 		  bonus=yes
@@ -300,6 +303,7 @@
     {MOVE_UNIT id=Clare $trolls_leader_store.x $trolls_leader_store.y}
     {LOOT 75 1}
     {CLEAR_VARIABLE trolls_leader_store}
+    {VARIABLE trolls_spared no}
     [endlevel]
 		  result=victory
 		  bonus=yes
@@ -317,6 +321,12 @@
       speaker=Clare
       message=_"Yes, of course."
     [/message]
+    # save the choice for later chapters
+    [set_global_variable]
+      namespace=james_the_invisible_for_power
+      from_local=trolls_spared
+      to_global=chapter_3_trolls
+    [/set_global_variable]
   [/event]
   
   [event]
