wescamp.py: Update from add-on server

--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -123,7 +123,7 @@
 	  [objectives]
 	  	side=1
 	 		[objective]
-				description= _ "Find the mage's place"
+				description= _ "Find Haldar's place with Clare"
 				condition=win
 			[/objective]
 			{HOW_TO_LOSE2}
@@ -287,16 +287,41 @@
     [/modify_side]
   [/event]
   
+  {ON_SIGHTING () 1 side=3 (
+    [scroll_to_unit]
+      id=second_unit.id
+    [/scroll_to_unit]
+    [delay]
+      time=500
+    [/delay]
+    [message]
+      speaker=Tinry
+      message=_"Aaaahhh! Some monsters just emerged from the deep water! The rumours were true. They'll drown us!"
+    [/message]
+    [message]
+      speaker=Merissa
+      message=_"Tinry, you scaredy-cat! You forgot we're pretty quick so we can avoid them but if they dare to attack us I'm sure your guys could handle them. These creatures aren't so strong ... I think."
+    [/message]
+    [message]
+      speaker=Tinry
+      message=_"Ah, alright, alrigh. Let's go smite them, guys."
+    [/message]
+  )}
+  
   [event]
     name=moveto
     [filter]
       x=26
-      y=0-3
+      y=1-3
       id=Clare
     [/filter]
     [message]
       speaker=unit
-      message= _ "I can feel the remnants of magic in the air. We have arrived."
+      message= _ "I can feel the remnants of magic in the air. We have arrived. Well, thank you for your help, people, I could not get here without your help. But what is ahead is just for me. Wait for me here, I shall be back soon."
+    [/message]
+    [message]
+      speaker=Tinry
+      message=_"Yes, ma'am!"
     [/message]
     {UNCLEAR_FOG}
     [endlevel]
