--- a/For_Power/scenarios/08_The_Teacher.cfg
+++ b/For_Power/scenarios/08_The_Teacher.cfg
@@ -48,7 +48,7 @@
 	  name=start
 	  [message]
 		  speaker=Clare
-		  message=_"Are you here, Haldar?"
+		  message=_"Well, I am here finally. Hm, why does he have to reside in a dark cave? It is very unusual. But I think that this is not important. He is a master of magic and can teach me many of his arts so I should not complain. I better look for him. Ehm, where are you, Haldar?"
 		[/message]
 		[move_unit]
 		  id=Clare
@@ -57,7 +57,7 @@
 		[/move_unit]
 		[message]
 		  speaker=Clare
-		  message=_"You are here."
+		  message=_"Here you are."
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -85,7 +85,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"It was surely an orc. But how can I help you?"
+		  message=_"It was surely an orc. They are well known to do such things. But how can I help you?"
 		[/message]
 		[message]
 		  speaker=Clare
@@ -101,7 +101,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"I am not a common mage. I walk on more darker paths. I am a necromancer."
+		  message=_"I am not a common mage. I do not limit myself to the knowledge that is taught at the Academy. I walk on more darker paths. I am a necromancer."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -118,11 +118,11 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Didn't you hear anything about me?"
+		  message=_"Did you not hear anything about me?"
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Two bandits said something but I didn't trust them. They are bandits. But this is wrong."
+		  message=_"Two bandits said something but I did not trust them. They are bandits, they are not shy to tell a lie for any reason. But this is wrong."
 		[/message]
 		[message]
 		  speaker=Haldar
