--- a/For_Power/scenarios/10a_An_Exercise.cfg
+++ b/For_Power/scenarios/10a_An_Exercise.cfg
@@ -66,13 +66,17 @@
 	[event]
 	  name=start
 	  {RECALL_HEROES2}
+    [message]
+      speaker=Clare
+      message=_"He is near. I can feel him very strongly. We could get to him just in a few hours if he still will be sitting at the same place. We just need to defeat this small group of orcs."
+    [/message]
 	  [message]
 	    speaker=orc
-	    message=_"Human worms? Ok, we wanted to attacks some their villages. Grunts, bring me their skulls!"
+	    message=_"Human worms? Well, we wanted to attacks some their villages. Grunts, bring me their skulls!"
 	  [/message]
 	  [message]
 	    speaker=Mubryn
-	    message=_"You will never get us. Men, to arms!"
+	    message=_"You'll never get us. Men, to arms!"
 	  [/message]
 	  [allow_recruit]
 	    side=1
@@ -97,7 +101,7 @@
 	  name=time over
 	  [message]
 	    speaker=Clare
-	    message=_"We lost a lot of time here. I cannot find his tracks anymore."
+	    message=_"We lost a lot of time here. I cannot feel his presence anymore. He probably moved to a much bigger town where we will never get him. I have failed."
 	  [/message]
 	  [endlevel]
 		  result=defeat
