--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -143,7 +143,7 @@
     name=_"Gridash"
 		canrecruit=yes
 
-		recruit=Orcish Grunt,Orcish Archer
+		recruit=Orcish Grunt,Orcish Archer,Wolf Rider
 
 		{FLAG_VARIANT ragged}
 		{GOLD 80 95 110}
@@ -264,11 +264,11 @@
     {SET_TERRAIN 44 29 Ce}
 		[message]
 			speaker=Lemyr
-			message=_"We have arrived, but this is not good news. The orcs have crossed the river!"
+			message=_"We have arrived, but this is not good news. The orcs have crossed the river! And it is even worse - their strongest warriors besieged our keep! They are standing above dead corpses of many of our militiamen. I worry that we have arrived too late to save my village."
 		[/message]
 		[message]
 			speaker=Rheran
-			message=_"Worry not. My riders shall eliminate the orcs this side of the river, then we shall drive them back!"
+			message=_"Worry not, young knight. My riders shall eliminate the orcs this side of the river, then we shall drive them back! Your fellows will survive."
 		[/message]
 		[message]
 			speaker=Rheran
@@ -304,7 +304,7 @@
 		{ATTACK_AND_KILL rider4 21 30 melee}
     [message]
 			speaker=Glacyn
-			message=_"I thank you, Sir Lemyr, for bringing us reinforcments."
+			message=_"I thank you, Sir Lemyr, for bringing us reinforcements. We were already giving up on hope that we could keep our lives."
 		[/message]
 		[message]
 			speaker=Lemyr
@@ -375,7 +375,7 @@
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"Give my thanks to the Earl."
+			message=_"Agreed. But we shall not forgot to show our gratidute to our savior. Lieutenant, give my thanks to the Earl."
 		[/message]
 		[message]
 			speaker=Rheran
@@ -392,7 +392,7 @@
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"And I am glad to be back."
+			message=_"And I am also glad to be back."
 		[/message]
 		[message]
 			speaker=Clare
