--- a/For_Power/scenarios/16a_Another_Orcish_Assault.cfg
+++ b/For_Power/scenarios/16a_Another_Orcish_Assault.cfg
@@ -60,7 +60,7 @@
     generate_name=yes
 		canrecruit=yes
 
-		recruit=Orcish Grunt,Orcish Archer
+		recruit=Orcish Grunt,Orcish Archer,Orcish Assassin
 
 		{FLAG_VARIANT ragged}
 		{GOLD 125 135 150}
@@ -78,7 +78,7 @@
     generate_name=yes
 		canrecruit=yes
 
-		recruit=Orcish Grunt,Orcish Archer
+		recruit=Orcish Grunt,Orcish Archer,Orcish Assassin
 
 		{FLAG_VARIANT ragged}
 		{GOLD 125 135 150}
@@ -136,7 +136,7 @@
 		[/role]
 		[message]
 			role=reporter
-			message=_"Oh no. There are the orcs again, Lemyr."
+			message=_"Oh no. There are the orcs again, Lemyr. It seems our peace time came to its end."
 		[/message]
 		[message]
 			speaker=Lemyr
@@ -163,7 +163,7 @@
 	[event]
 	  name=turn 2
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Lemyr, this is not your fight. This has nothing to do with you."
 	  [/message]
 	  [message]
@@ -171,7 +171,7 @@
 			message=_"No. Nothing is more important to me than you."
 		[/message]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Even our village? You cannot give up its inhabinants because of me. I cannot allow you to do it."
 	  [/message]
 	  [message]
@@ -179,7 +179,7 @@
 			message=_"But what can I do?"
 		[/message]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"You can fight on my side if is it your choice, but you may not require it from them."
 	  [/message]
 	  [role]
@@ -192,15 +192,15 @@
 			message=_"This is our choice, Clare. You are our friend. You did a lot of good things for us."
 		[/message]
 		[message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"But ..."
 	  [/message]
 	  [message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"He is right. They have chosen as I did. I told you that you were a good girl."
 	  [/message]
 	  [message]
-	    id=Clare
+	    speaker=Clare
 	    message=_"Ok, Merissa."
 	  [/message]
 	[/event]
@@ -261,7 +261,7 @@
 			message=_"What did we miss?"
 		[/message]
 		[message]
-	    id=Merissa
+	    speaker=Merissa
 	    message=_"A good fight with the orcs."
 	  [/message]
 	  [message]
